--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">LibraryPractica</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="PasswordRepeat">Repeat pasword</string>
+    <string name="Email">Email</string>
+    <string name="UserName">User name</string>
+    <string name="Password">Password</string>
+    <string name="Register">Register</string>
+    <string name="alreadyLogin">Are you already logged?</string>
+    <string name="buttonImg">Select image</string>
+    <string name="Login">Login</string>
+    <string name="backToRegistratio">Back to Register</string>
 </resources>
