--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="buttonImg">Select image</string>
     <string name="Login">Login</string>
     <string name="goToRegister">Do you have an account?</string>
+    <string name="textview">TextView</string>
+    <string name="todo">TODO</string>
+    <string name="Wrongemail">Wrong Email or Password</string>
+    <string name="Registerfirst">You have to be registered first</string>
+    <string name="ErrorName">Username not available.</string>
+    <string name="PasswordnotMatch">Passwords doesn\'t match</string>
+    <string name="PasswordnotCorrect">The password cannot be empty or have a length of less then 8 characters</string>
+    <string name="UserNamenotValid">Username not valid</string>
+    <string name="NoInternet">No Internet Connection</string>
 </resources>
